"""Real-data tests against the offline fixture channel (no TUI involved).

These replace hand-built ``RepoDataRecord`` objects and monkeypatched loaders
with records and archives produced by py-rattler from real conda-forge
packages, served by the local channel from ``conftest.py``.
"""

from __future__ import annotations

import asyncio

import pytest
from rattler.config import Config
from rattler.exceptions import GatewayError
from rattler.match_spec import MatchSpec
from rattler.networking import Client
from rattler.platform import Subdir
from syrupy.assertion import SnapshotAssertion

from pixi_browse.models import VersionArtifactData
from pixi_browse.rendering import (
    build_version_details_metadata_rows,
    format_version_details_run_exports,
    render_channel_notice_heading,
    render_channel_notice_message,
    render_package_preview,
)
from pixi_browse.repodata import (
    discover_available_platforms,
    fetch_channel_notices,
    fetch_package_names,
    normalize_channel_names,
    query_matchspec_records,
    query_package_records,
    query_whoneeds_records,
)
from pixi_browse.tui import CondaMetadataTui
from pixi_browse.tui.version_loader import VersionDataLoader
from tests.helpers import (
    BIOCONDA_CHANNEL,
    CHANNEL_PLATFORMS,
    MAIN_CHANNEL,
    MISSING_CHANNEL,
    GatewayFactory,
)


def test_discover_available_platforms_finds_indexed_subdirs(
    make_gateway: GatewayFactory,
) -> None:
    platforms = asyncio.run(
        discover_available_platforms(
            gateway=make_gateway(), channel_names=[MAIN_CHANNEL]
        )
    )

    assert platforms == [
        Subdir("linux-64"),
        Subdir("osx-arm64"),
        Subdir("noarch"),
    ]


def test_discover_available_platforms_merges_the_channels(
    make_gateway: GatewayFactory,
) -> None:
    """``bioconda`` only ships noarch packages; the result is the union with
    the platforms of ``conda-forge``."""
    gateway = make_gateway()

    assert asyncio.run(
        discover_available_platforms(gateway=gateway, channel_names=[BIOCONDA_CHANNEL])
    ) == [Subdir("noarch")]
    assert asyncio.run(
        discover_available_platforms(
            gateway=gateway, channel_names=[BIOCONDA_CHANNEL, MAIN_CHANNEL]
        )
    ) == [
        Subdir("linux-64"),
        Subdir("osx-arm64"),
        Subdir("noarch"),
    ]


def test_discover_available_platforms_rejects_channel_without_noarch(
    make_gateway: GatewayFactory,
) -> None:
    """``missing`` serves no repodata at all. rattler requires the noarch
    subdir of every channel, so the whole selection is refused and rattler's
    error names the channel."""
    with pytest.raises(
        GatewayError, match="could not find subdir 'noarch' in channel .*missing"
    ):
        asyncio.run(
            discover_available_platforms(
                gateway=make_gateway(),
                channel_names=[MAIN_CHANNEL, MISSING_CHANNEL],
            )
        )


def test_normalize_channel_names_strips_and_dedupes() -> None:
    assert normalize_channel_names([" bioconda ", "conda-forge", "bioconda", ""]) == [
        "bioconda",
        "conda-forge",
    ]
    assert normalize_channel_names([]) == []
    assert normalize_channel_names(["", "  "]) == []


def test_fetch_package_names_lists_channel_packages(
    make_gateway: GatewayFactory,
) -> None:
    platforms, names = asyncio.run(
        fetch_package_names(
            gateway=make_gateway(),
            channel_names=[MAIN_CHANNEL],
            selected_platforms=CHANNEL_PLATFORMS,
        )
    )

    assert platforms == list(CHANNEL_PLATFORMS)
    assert names == ["libzlib", "manim", "pixi-browse", "polars", "six", "zlib"]


def test_fetch_package_names_merges_all_channels(
    make_gateway: GatewayFactory,
) -> None:
    _platforms, names = asyncio.run(
        fetch_package_names(
            gateway=make_gateway(),
            channel_names=[MAIN_CHANNEL, BIOCONDA_CHANNEL],
            selected_platforms=CHANNEL_PLATFORMS,
        )
    )

    assert names == [
        "libzlib",
        "manim",
        "pixi-browse",
        "polars",
        "pyfaidx",
        "six",
        "snakemake-wrapper-utils",
        "zlib",
    ]


def test_fetch_channel_notices_without_notices_file(
    make_gateway: GatewayFactory,
) -> None:
    """``conda-forge`` has no ``notices.json``; that is not an error."""
    notices = asyncio.run(
        fetch_channel_notices(gateway=make_gateway(), channel_names=[MAIN_CHANNEL])
    )

    assert notices == []


def test_fetch_channel_notices_lists_live_notices(
    make_gateway: GatewayFactory, snapshot: SnapshotAssertion
) -> None:
    """The notices of ``bioconda``'s ``notices.json`` come back most urgent
    first, without the expired one, and render under the channel's name."""
    result = asyncio.run(
        fetch_channel_notices(
            gateway=make_gateway(),
            channel_names=[MAIN_CHANNEL, BIOCONDA_CHANNEL],
        )
    )

    assert [(notice.level, notice.id) for notice in result] == [
        ("critical", "pyfaidx-security"),
        ("warning", "python-3.9-eol"),
        ("info", "mirror"),
    ]
    assert [
        {
            "channel": notice.channel,
            "created_at": notice.created_at,
            "expires_at": notice.expires_at,
            "interval": notice.interval,
            "message": notice.message,
        }
        for notice in result
    ] == snapshot
    assert [
        (
            render_channel_notice_heading(notice).plain,
            render_channel_notice_message(notice).plain,
        )
        for notice in result
    ] == snapshot


def test_query_whoneeds_records_spans_all_channels(
    make_gateway: GatewayFactory,
) -> None:
    """``pyfaidx`` (bioconda) depends on ``six`` (conda-forge); the reverse
    query sees the dependency across the channel boundary."""
    result = asyncio.run(
        query_whoneeds_records(
            gateway=make_gateway(),
            channel_names=[MAIN_CHANNEL, BIOCONDA_CHANNEL],
            platforms=list(CHANNEL_PLATFORMS),
            target="six",
            log=lambda _message: None,
        )
    )

    assert result.package_names == ["pyfaidx"]
    assert all(
        str(record.url).startswith("https://conda.anaconda.org/bioconda/")
        for record in result.records_by_package["pyfaidx"]
    )


def test_query_package_records_sorts_newest_first(
    make_gateway: GatewayFactory,
) -> None:
    records = asyncio.run(
        query_package_records(
            gateway=make_gateway(),
            channel_names=["conda-forge"],
            platforms=list(CHANNEL_PLATFORMS),
            package_name="libzlib",
        )
    )

    assert [str(record.version) for record in records] == [
        "1.3.2",
        "1.3.2",
        "1.3.1",
        "1.3.1",
    ]
    assert {(record.subdir, record.build) for record in records} == {
        ("linux-64", "h25fd6f3_3"),
        ("osx-arm64", "h8088a28_3"),
        ("linux-64", "hb9d3cd8_2"),
        ("osx-arm64", "h8359307_2"),
    }
    assert all(
        str(record.url).startswith("https://conda.anaconda.org/conda-forge/")
        for record in records
    )


def test_query_matchspec_records_groups_matching_records(
    make_gateway: GatewayFactory,
) -> None:
    result = asyncio.run(
        query_matchspec_records(
            gateway=make_gateway(),
            channel_names=["conda-forge"],
            platforms=list(CHANNEL_PLATFORMS),
            matchspec=MatchSpec("libzlib >=1.3.2", exact_names_only=False),
        )
    )

    assert result.package_names == ["libzlib"]
    assert {str(record.version) for record in result.records_by_package["libzlib"]} == {
        "1.3.2"
    }


def test_query_whoneeds_records_finds_zlib_depending_on_libzlib(
    make_gateway: GatewayFactory,
) -> None:
    logs: list[str] = []
    result = asyncio.run(
        query_whoneeds_records(
            gateway=make_gateway(),
            channel_names=["conda-forge"],
            platforms=list(CHANNEL_PLATFORMS),
            target="libzlib",
            log=logs.append,
        )
    )

    # rattler also reports records whose *run exports* reference the target,
    # which is why libzlib shows up as needing itself.
    assert result.package_names == ["libzlib", "zlib"]
    assert {record.subdir for record in result.records_by_package["zlib"]} == {
        "linux-64",
        "osx-arm64",
    }
    assert {str(record.version) for record in result.records_by_package["libzlib"]} == {
        "1.3.1",
        "1.3.2",
    }
    assert logs[0].startswith("who-needs: starting gateway reverse query")


def test_render_package_preview_from_real_records(
    make_gateway: GatewayFactory, snapshot: SnapshotAssertion
) -> None:
    records = asyncio.run(
        query_package_records(
            gateway=make_gateway(),
            channel_names=["conda-forge"],
            platforms=list(CHANNEL_PLATFORMS),
            package_name="libzlib",
        )
    )

    assert render_package_preview("libzlib", records) == snapshot


@pytest.mark.parametrize(
    ("package_name", "subdir", "version"),
    [
        ("pixi-browse", "noarch", "0.0.14"),
        ("pixi-browse", "noarch", "0.0.15"),
        ("manim", "noarch", "0.22.0"),
        ("libzlib", "linux-64", "1.3.2"),
        ("six", "noarch", "1.16.0"),
    ],
)
def test_load_version_artifact_data_reads_real_archives(
    make_gateway: GatewayFactory,
    rattler_client: Client,
    snapshot: SnapshotAssertion,
    package_name: str,
    subdir: str,
    version: str,
) -> None:
    """Metadata, run exports and file lists come straight out of the archive,
    for both ``.conda`` and legacy ``.tar.bz2`` packages."""

    async def load() -> tuple[
        list[str], list[str], list[str], list[str], list[str], list[str]
    ]:
        records = await query_package_records(
            gateway=make_gateway(),
            channel_names=["conda-forge"],
            platforms=[Subdir(subdir)],
            package_name=package_name,
        )
        record = next(record for record in records if str(record.version) == version)
        loader = VersionDataLoader(client=rattler_client)
        details = await loader.load_version_artifact_data(
            package_name,
            record,
            preview_key=(
                package_name,
                version,
                record.build,
                record.build_number,
                record.subdir,
                record.file_name,
            ),
        )
        files = [
            f"{file.path} -> {file.link_target}" if file.is_symlink else file.path
            for file in details.file_paths
        ]
        return (
            [
                f"{label}: {value}"
                for label, value in build_version_details_metadata_rows(details)
            ],
            list(details.dependencies),
            [
                f"{group}: {dependency}"
                for group, dependencies in details.extra_depends
                for dependency in dependencies
            ],
            list(format_version_details_run_exports(details.run_exports)),
            files + [file.path for file in details.info_files],
            [
                f"{row.label}: {row.left!r} -> {row.right!r}"
                for row in details.repodata_patches.rows
            ],
        )

    metadata, dependencies, extra_depends, run_exports, files, repodata_patches = (
        asyncio.run(load())
    )

    assert {
        "metadata": metadata,
        "dependencies": dependencies,
        "extra_depends": extra_depends,
        "run_exports": run_exports,
        "files": files,
        # The fixture repodata is generated from the packages' own index.json,
        # so anything reported here is a false positive of the patch detection.
        "repodata_patches": repodata_patches,
    } == snapshot


def test_load_version_artifact_data_reads_prefix_replacement_from_paths_json(
    make_gateway: GatewayFactory, rattler_client: Client
) -> None:
    """``zlib`` bakes its build prefix into ``lib/pkgconfig/zlib.pc``, so
    ``info/paths.json`` requests text replacement for that file only."""

    async def load() -> list[tuple[str, str | None]]:
        records = await query_package_records(
            gateway=make_gateway(),
            channel_names=["conda-forge"],
            platforms=[Subdir("linux-64")],
            package_name="zlib",
        )
        record = records[0]
        loader = VersionDataLoader(client=rattler_client)
        archive = await loader.get_package_archive(
            ("zlib", "1.3.1", record.build, record.build_number, "linux-64", "zlib"),
            str(record.url),
        )
        paths = await loader.get_package_paths(
            ("zlib", "1.3.1", record.build, record.build_number, "linux-64", "zlib"),
            archive,
        )
        return [
            (package_file.path, package_file.prefix_replacement)
            for package_file in paths
            if package_file.prefix_replacement is not None
        ]

    assert asyncio.run(load()) == [("lib/pkgconfig/zlib.pc", "text")]


def test_load_version_artifact_data_is_cached_per_preview_key(
    make_gateway: GatewayFactory, rattler_client: Client
) -> None:
    """The archive, its paths and the assembled details are read once per
    artifact; later requests for the same key reuse the cached objects."""

    async def load_twice() -> tuple[VersionArtifactData, VersionArtifactData]:
        records = await query_package_records(
            gateway=make_gateway(),
            channel_names=["conda-forge"],
            platforms=[Subdir("noarch")],
            package_name="six",
        )
        record = records[0]
        loader = VersionDataLoader(client=rattler_client)
        preview_key = (
            "six",
            str(record.version),
            record.build,
            record.build_number,
            record.subdir,
            record.file_name,
        )
        first = await loader.load_version_details(
            "six", record, preview_key=preview_key
        )
        archive = await loader.get_package_archive(preview_key, str(record.url))
        second = await loader.load_version_artifact_data(
            "six", record, preview_key=preview_key
        )
        assert loader.archive_cache[preview_key] is archive
        assert preview_key in loader.paths_cache
        assert preview_key in loader.about_urls_cache
        return first, second

    first, second = asyncio.run(load_twice())

    assert second is first
    assert first.dependencies == ("python >=3.9",)


def test_app_shares_the_client_with_its_version_loader(rattler_config: Config) -> None:
    app = CondaMetadataTui(default_channels=["conda-forge"], config=rattler_config)

    assert app._version_loader._client is app._client


def test_app_creates_a_default_client_without_config() -> None:
    app = CondaMetadataTui(default_channels=["conda-forge"])

    assert isinstance(app._client, Client)
    assert app._version_loader._client is app._client
