# serializer version: 1
# name: test_fetch_channel_notices_lists_live_notices
  list([
    dict({
      'channel': 'https://conda.anaconda.org/bioconda/',
      'created_at': '2025-12-15T00:00:00Z',
      'expires_at': '2099-01-01T00:00:00Z',
      'interval': None,
      'message': '''
        pyfaidx <0.8 has a known security issue.
        Update to pyfaidx 0.8.1 or later.
      ''',
    }),
    dict({
      'channel': 'https://conda.anaconda.org/bioconda/',
      'created_at': '2025-11-03T09:00:00Z',
      'expires_at': '2099-01-01T00:00:00Z',
      'interval': 168,
      'message': 'Builds for Python 3.9 stop on 2026-01-01. Pin a newer Python before then.',
    }),
    dict({
      'channel': 'https://conda.anaconda.org/bioconda/',
      'created_at': None,
      'expires_at': None,
      'interval': None,
      'message': 'The channel is also mirrored at https://prefix.dev/bioconda.',
    }),
  ])
# ---
# name: test_fetch_channel_notices_lists_live_notices.1
  list([
    tuple(
      '!! CRITICAL · bioconda · 2025-12-15',
      '''
        pyfaidx <0.8 has a known security issue.
        Update to pyfaidx 0.8.1 or later.
      ''',
    ),
    tuple(
      ' ! WARNING · bioconda · 2025-11-03',
      'Builds for Python 3.9 stop on 2026-01-01. Pin a newer Python before then.',
    ),
    tuple(
      ' i INFO · bioconda',
      'The channel is also mirrored at https://prefix.dev/bioconda.',
    ),
  ])
# ---
# name: test_load_version_artifact_data_reads_real_archives[libzlib-linux-64-1.3.2]
  dict({
    'dependencies': list([
      '__glibc >=2.17,<3.0.a0',
    ]),
    'extra_depends': list([
    ]),
    'files': list([
      'lib/libz.so.1 -> libz.so.1.3.2',
      'lib/libz.so.1.3.2',
      'info/recipe/parent/bld.bat',
      'info/hash_input.json',
      'info/test/run_test.sh',
      'info/licenses/LICENSE',
      'info/recipe/meta.yaml',
      'info/files',
      'info/paths.json',
      'info/run_exports.json',
      'info/about.json',
      'info/recipe/parent/test_compile_flags.bat',
      'info/recipe/parent/conda_build_config.yaml',
      'info/recipe/parent/meta.yaml',
      'info/recipe/parent/build.sh',
      'info/recipe/conda_build_config.yaml',
      'info/git',
      'info/recipe/parent/test_compile_flags.c',
      'info/index.json',
      'info/recipe/parent/recipe-scripts-license.txt',
    ]),
    'metadata': list([
      'Package: libzlib',
      'Name: libzlib',
      'Version: 1.3.2',
      'Build: h25fd6f3_3',
      'Build Number: 3',
      'Subdir: linux-64',
      'File Name: libzlib-1.3.2-h25fd6f3_3.conda',
      'Channel: https://conda.anaconda.org/conda-forge/',
      'Size: 62.2 KiB (63,713 bytes)',
      'Timestamp: 2026-07-29T22:09:12.714000+00:00',
      'Indexed Timestamp: 2026-07-30T22:09:12.714000+00:00',
      'License: Zlib',
      'License Family: Other',
      'Arch: x86_64',
      'Platform: linux',
      'NoArch: none',
      'Features: not available',
      'Track Features: none',
      'Python Site-Packages: not available',
      'MD5: 0de0122d9570a8ab637c6b73db268389',
      'SHA256: eb8a0db0aa570124f7d2a93d7c7f596e3390df5e047818d873baad32985fc736',
      'Legacy .tar.bz2 MD5: not available',
      'Legacy .tar.bz2 Size: not available',
      "Package URL: [underline link='https://conda.anaconda.org/conda-forge/linux-64/libzlib-1.3.2-h25fd6f3_3.conda']https://conda.anaconda.org/conda-forge/linux-64/libzlib-1.3.2-h25fd6f3_3.conda[/]",
      "Repository: [underline link='https://github.com/madler/zlib']https://github.com/madler/zlib[/]",
      "Documentation: [underline link='http://zlib.net/manual.html']http://zlib.net/manual.html[/]",
      "Homepage: [underline link='http://zlib.net/']http://zlib.net/[/]",
      "Recipe maintainers: [underline link='https://github.com/groutr']@groutr[/], [underline link='https://github.com/msarahan']@msarahan[/], [underline link='https://github.com/ocefpaf']@ocefpaf[/], [underline link='https://github.com/isuruf']@isuruf[/]",
      "Provenance: [underline link='https://github.com/conda-forge/zlib-feedstock/commit/044fc2361e1c5f1a35c8f417f1434a585e627297']conda-forge/zlib-feedstock@044fc2361e1c5f1a35c8f417f1434a585e627297[/]",
    ]),
    'repodata_patches': list([
      "constrains: 'zlib 1.3.2 *_3' -> 'zlib ==1.3.2 *_3'",
    ]),
    'run_exports': list([
      'weak: libzlib >=1.3.2,<2.0a0',
    ]),
  })
# ---
# name: test_load_version_artifact_data_reads_real_archives[manim-noarch-0.22.0]
  dict({
    'dependencies': list([
      'python >=3.11',
      'audioop-lts >=0.2.1',
      'av >=15.0',
      'beautifulsoup4 >=4.12',
      'click >=8.0',
      'cloup >=2.0.0',
      'decorator >=5.1.0',
      'isosurfaces >=0.1.1',
      'manimpango >=0.7.0,<1.0.0',
      'mapbox_earcut >=1.0.0',
      'moderngl-window >=2.0.0',
      'moderngl >=5.7.0,<6.0.0',
      'networkx >=2.6',
      'numpy >=2.1',
      'pillow >=11.0',
      'pycairo >=1.14,<2.0.0',
      'pydub >=0.22.0',
      'pygments >=2.17',
      'rich >=12.0.0',
      'scipy >=1.13.0',
      'screeninfo >=0.7.0',
      'skia-pathops >=0.9.0',
      'srt >=3.0.0',
      'svgelements >=1.9.0',
      'tqdm >=4.21.0',
      'typing_extensions >=4.12.0',
      'watchdog >=2.0.0',
      'ffmpeg',
      'python',
    ]),
    'extra_depends': list([
      'gui: dearpygui >=1.0.0',
      'jupyterlab: jupyterlab >=4.3.4',
      'jupyterlab: notebook >=7.3.2',
      'typst: typst-py >=0.14',
    ]),
    'files': list([
      'site-packages/manim/__init__.py',
      'site-packages/manim/__main__.py',
      'site-packages/manim/_config/__init__.py',
      'site-packages/manim/_config/cli_colors.py',
      'site-packages/manim/_config/default.cfg',
      'site-packages/manim/_config/logger_utils.py',
      'site-packages/manim/_config/output.py',
      'site-packages/manim/_config/output_plan.py',
      'site-packages/manim/_config/render_session.py',
      'site-packages/manim/_config/utils.py',
      'site-packages/manim/_config/video_encoder.py',
      'site-packages/manim/animation/__init__.py',
      'site-packages/manim/animation/animation.py',
      'site-packages/manim/animation/changing.py',
      'site-packages/manim/animation/composition.py',
      'site-packages/manim/animation/creation.py',
      'site-packages/manim/animation/fading.py',
      'site-packages/manim/animation/growing.py',
      'site-packages/manim/animation/indication.py',
      'site-packages/manim/animation/movement.py',
      'site-packages/manim/animation/numbers.py',
      'site-packages/manim/animation/rotation.py',
      'site-packages/manim/animation/specialized.py',
      'site-packages/manim/animation/speedmodifier.py',
      'site-packages/manim/animation/transform.py',
      'site-packages/manim/animation/transform_matching_parts.py',
      'site-packages/manim/animation/updaters/__init__.py',
      'site-packages/manim/animation/updaters/mobject_update_utils.py',
      'site-packages/manim/animation/updaters/update.py',
      'site-packages/manim/camera/__init__.py',
      'site-packages/manim/camera/camera.py',
      'site-packages/manim/camera/mapping_camera.py',
      'site-packages/manim/camera/moving_camera.py',
      'site-packages/manim/camera/multi_camera.py',
      'site-packages/manim/camera/three_d_camera.py',
      'site-packages/manim/cli/__init__.py',
      'site-packages/manim/cli/cache/__init__.py',
      'site-packages/manim/cli/cache/commands.py',
      'site-packages/manim/cli/cfg/__init__.py',
      'site-packages/manim/cli/cfg/group.py',
      'site-packages/manim/cli/checkhealth/__init__.py',
      'site-packages/manim/cli/checkhealth/checks.py',
      'site-packages/manim/cli/checkhealth/commands.py',
      'site-packages/manim/cli/default_group.py',
      'site-packages/manim/cli/init/__init__.py',
      'site-packages/manim/cli/init/commands.py',
      'site-packages/manim/cli/plugins/__init__.py',
      'site-packages/manim/cli/plugins/commands.py',
      'site-packages/manim/cli/render/__init__.py',
      'site-packages/manim/cli/render/commands.py',
      'site-packages/manim/cli/render/ease_of_access_options.py',
      'site-packages/manim/cli/render/global_options.py',
      'site-packages/manim/cli/render/output_options.py',
      'site-packages/manim/cli/render/render_options.py',
      'site-packages/manim/constants.py',
      'site-packages/manim/data_structures.py',
      'site-packages/manim/manager.py',
      'site-packages/manim/mobject/__init__.py',
      'site-packages/manim/mobject/frame.py',
      'site-packages/manim/mobject/geometry/__init__.py',
      'site-packages/manim/mobject/geometry/arc.py',
      'site-packages/manim/mobject/geometry/boolean_ops.py',
      'site-packages/manim/mobject/geometry/labeled.py',
      'site-packages/manim/mobject/geometry/line.py',
      'site-packages/manim/mobject/geometry/polygram.py',
      'site-packages/manim/mobject/geometry/shape_matchers.py',
      'site-packages/manim/mobject/geometry/tips.py',
      'site-packages/manim/mobject/graph.py',
      'site-packages/manim/mobject/graphing/__init__.py',
      'site-packages/manim/mobject/graphing/coordinate_systems.py',
      'site-packages/manim/mobject/graphing/functions.py',
      'site-packages/manim/mobject/graphing/number_line.py',
      'site-packages/manim/mobject/graphing/probability.py',
      'site-packages/manim/mobject/graphing/scale.py',
      'site-packages/manim/mobject/logo.py',
      'site-packages/manim/mobject/matrix.py',
      'site-packages/manim/mobject/mobject.py',
      'site-packages/manim/mobject/opengl/__init__.py',
      'site-packages/manim/mobject/opengl/dot_cloud.py',
      'site-packages/manim/mobject/opengl/opengl_compatibility.py',
      'site-packages/manim/mobject/opengl/opengl_geometry.py',
      'site-packages/manim/mobject/opengl/opengl_image_mobject.py',
      'site-packages/manim/mobject/opengl/opengl_mobject.py',
      'site-packages/manim/mobject/opengl/opengl_point_cloud_mobject.py',
      'site-packages/manim/mobject/opengl/opengl_surface.py',
      'site-packages/manim/mobject/opengl/opengl_three_dimensions.py',
      'site-packages/manim/mobject/opengl/opengl_vectorized_mobject.py',
      'site-packages/manim/mobject/svg/__init__.py',
      'site-packages/manim/mobject/svg/brace.py',
      'site-packages/manim/mobject/svg/svg_mobject.py',
      'site-packages/manim/mobject/table.py',
      'site-packages/manim/mobject/text/__init__.py',
      'site-packages/manim/mobject/text/code_mobject.py',
      'site-packages/manim/mobject/text/numbers.py',
      'site-packages/manim/mobject/text/tex_mobject.py',
      'site-packages/manim/mobject/text/text_mobject.py',
      'site-packages/manim/mobject/text/typst_mobject.py',
      'site-packages/manim/mobject/three_d/__init__.py',
      'site-packages/manim/mobject/three_d/polyhedra.py',
      'site-packages/manim/mobject/three_d/three_d_utils.py',
      'site-packages/manim/mobject/three_d/three_dimensions.py',
      'site-packages/manim/mobject/types/__init__.py',
      'site-packages/manim/mobject/types/image_mobject.py',
      'site-packages/manim/mobject/types/point_cloud_mobject.py',
      'site-packages/manim/mobject/types/vectorized_mobject.py',
      'site-packages/manim/mobject/utils.py',
      'site-packages/manim/mobject/value_tracker.py',
      'site-packages/manim/mobject/vector_field.py',
      'site-packages/manim/opengl/__init__.py',
      'site-packages/manim/plugins/__init__.py',
      'site-packages/manim/plugins/plugins_flags.py',
      'site-packages/manim/py.typed',
      'site-packages/manim/renderer/__init__.py',
      'site-packages/manim/renderer/cairo_renderer.py',
      'site-packages/manim/renderer/opengl_renderer.py',
      'site-packages/manim/renderer/opengl_renderer_window.py',
      'site-packages/manim/renderer/protocol.py',
      'site-packages/manim/renderer/shader.py',
      'site-packages/manim/renderer/shader_wrapper.py',
      'site-packages/manim/renderer/shaders/default/frag.glsl',
      'site-packages/manim/renderer/shaders/default/vert.glsl',
      'site-packages/manim/renderer/shaders/design.frag',
      'site-packages/manim/renderer/shaders/design_2.frag',
      'site-packages/manim/renderer/shaders/design_3.frag',
      'site-packages/manim/renderer/shaders/image/frag.glsl',
      'site-packages/manim/renderer/shaders/image/vert.glsl',
      'site-packages/manim/renderer/shaders/include/NOTE.md',
      'site-packages/manim/renderer/shaders/include/add_light.glsl',
      'site-packages/manim/renderer/shaders/include/camera_uniform_declarations.glsl',
      'site-packages/manim/renderer/shaders/include/finalize_color.glsl',
      'site-packages/manim/renderer/shaders/include/get_gl_Position.glsl',
      'site-packages/manim/renderer/shaders/include/get_rotated_surface_unit_normal_vector.glsl',
      'site-packages/manim/renderer/shaders/include/get_unit_normal.glsl',
      'site-packages/manim/renderer/shaders/include/position_point_into_frame.glsl',
      'site-packages/manim/renderer/shaders/include/quadratic_bezier_distance.glsl',
      'site-packages/manim/renderer/shaders/include/quadratic_bezier_geometry_functions.glsl',
      'site-packages/manim/renderer/shaders/manim_coords/frag.glsl',
      'site-packages/manim/renderer/shaders/manim_coords/vert.glsl',
      'site-packages/manim/renderer/shaders/quadratic_bezier_fill/frag.glsl',
      'site-packages/manim/renderer/shaders/quadratic_bezier_fill/geom.glsl',
      'site-packages/manim/renderer/shaders/quadratic_bezier_fill/vert.glsl',
      'site-packages/manim/renderer/shaders/quadratic_bezier_stroke/frag.glsl',
      'site-packages/manim/renderer/shaders/quadratic_bezier_stroke/geom.glsl',
      'site-packages/manim/renderer/shaders/quadratic_bezier_stroke/vert.glsl',
      'site-packages/manim/renderer/shaders/simple_vert.glsl',
      'site-packages/manim/renderer/shaders/surface/frag.glsl',
      'site-packages/manim/renderer/shaders/surface/vert.glsl',
      'site-packages/manim/renderer/shaders/test/frag.glsl',
      'site-packages/manim/renderer/shaders/test/vert.glsl',
      'site-packages/manim/renderer/shaders/textured_surface/frag.glsl',
      'site-packages/manim/renderer/shaders/textured_surface/vert.glsl',
      'site-packages/manim/renderer/shaders/true_dot/frag.glsl',
      'site-packages/manim/renderer/shaders/true_dot/geom.glsl',
      'site-packages/manim/renderer/shaders/true_dot/vert.glsl',
      'site-packages/manim/renderer/shaders/vectorized_mobject_fill/frag.glsl',
      'site-packages/manim/renderer/shaders/vectorized_mobject_fill/vert.glsl',
      'site-packages/manim/renderer/shaders/vectorized_mobject_stroke/frag.glsl',
      'site-packages/manim/renderer/shaders/vectorized_mobject_stroke/vert.glsl',
      'site-packages/manim/renderer/shaders/vertex_colors/frag.glsl',
      'site-packages/manim/renderer/shaders/vertex_colors/vert.glsl',
      'site-packages/manim/renderer/vectorized_mobject_rendering.py',
      'site-packages/manim/scene/__init__.py',
      'site-packages/manim/scene/moving_camera_scene.py',
      'site-packages/manim/scene/scene.py',
      'site-packages/manim/scene/scene_file_writer.py',
      'site-packages/manim/scene/section.py',
      'site-packages/manim/scene/three_d_scene.py',
      'site-packages/manim/scene/vector_space_scene.py',
      'site-packages/manim/scene/video_segment_encoder.py',
      'site-packages/manim/scene/zoomed_scene.py',
      'site-packages/manim/templates/Axes.mtp',
      'site-packages/manim/templates/Default.mtp',
      'site-packages/manim/templates/MovingCamera.mtp',
      'site-packages/manim/templates/template.cfg',
      'site-packages/manim/typing.py',
      'site-packages/manim/utils/__init__.py',
      'site-packages/manim/utils/bezier.py',
      'site-packages/manim/utils/caching.py',
      'site-packages/manim/utils/color/AS2700.py',
      'site-packages/manim/utils/color/BS381.py',
      'site-packages/manim/utils/color/DVIPSNAMES.py',
      'site-packages/manim/utils/color/SVGNAMES.py',
      'site-packages/manim/utils/color/X11.py',
      'site-packages/manim/utils/color/XKCD.py',
      'site-packages/manim/utils/color/__init__.py',
      'site-packages/manim/utils/color/core.py',
      'site-packages/manim/utils/color/manim_colors.py',
      'site-packages/manim/utils/commands.py',
      'site-packages/manim/utils/config_ops.py',
      'site-packages/manim/utils/debug.py',
      'site-packages/manim/utils/deprecation.py',
      'site-packages/manim/utils/docbuild/__init__.py',
      'site-packages/manim/utils/docbuild/autoaliasattr_directive.py',
      'site-packages/manim/utils/docbuild/autocolor_directive.py',
      'site-packages/manim/utils/docbuild/manim_directive.py',
      'site-packages/manim/utils/docbuild/module_parsing.py',
      'site-packages/manim/utils/exceptions.py',
      'site-packages/manim/utils/family.py',
      'site-packages/manim/utils/family_ops.py',
      'site-packages/manim/utils/file_ops.py',
      'site-packages/manim/utils/hashing.py',
      'site-packages/manim/utils/images.py',
      'site-packages/manim/utils/ipython_magic.py',
      'site-packages/manim/utils/iterables.py',
      'site-packages/manim/utils/module_ops.py',
      'site-packages/manim/utils/opengl.py',
      'site-packages/manim/utils/parameter_parsing.py',
      'site-packages/manim/utils/paths.py',
      'site-packages/manim/utils/polylabel.py',
      'site-packages/manim/utils/qhull.py',
      'site-packages/manim/utils/rate_functions.py',
      'site-packages/manim/utils/simple_functions.py',
      'site-packages/manim/utils/sounds.py',
      'site-packages/manim/utils/space_ops.py',
      'site-packages/manim/utils/testing/__init__.py',
      'site-packages/manim/utils/testing/_frames_testers.py',
      'site-packages/manim/utils/testing/_show_diff.py',
      'site-packages/manim/utils/testing/_test_class_makers.py',
      'site-packages/manim/utils/testing/config_graphical_tests_monoframe.cfg',
      'site-packages/manim/utils/testing/config_graphical_tests_multiframes.cfg',
      'site-packages/manim/utils/testing/frames_comparison.py',
      'site-packages/manim/utils/tex.py',
      'site-packages/manim/utils/tex_file_writing.py',
      'site-packages/manim/utils/tex_templates.py',
      'site-packages/manim/utils/typst_file_writing.py',
      'site-packages/manim/utils/unit.py',
      'site-packages/manim-0.22.0.dist-info/INSTALLER',
      'site-packages/manim-0.22.0.dist-info/METADATA',
      'site-packages/manim-0.22.0.dist-info/RECORD',
      'site-packages/manim-0.22.0.dist-info/REQUESTED',
      'site-packages/manim-0.22.0.dist-info/WHEEL',
      'site-packages/manim-0.22.0.dist-info/direct_url.json',
      'site-packages/manim-0.22.0.dist-info/entry_points.txt',
      'site-packages/manim-0.22.0.dist-info/licenses/LICENSE',
      'site-packages/manim-0.22.0.dist-info/licenses/LICENSE.community',
      'info/about.json',
      'info/hash_input.json',
      'info/index.json',
      'info/licenses/LICENSE',
      'info/link.json',
      'info/paths.json',
      'info/recipe/recipe-scripts-license.txt',
      'info/recipe/recipe.yaml',
      'info/recipe/rendered_recipe.yaml',
      'info/recipe/variant_config.yaml',
      'info/tests/tests.yaml',
    ]),
    'metadata': list([
      'Package: manim',
      'Name: manim',
      'Version: 0.22.0',
      'Build: pyh5ded981_0',
      'Build Number: 0',
      'Subdir: noarch',
      'File Name: manim-0.22.0-pyh5ded981_0.conda',
      'Channel: https://conda.anaconda.org/conda-forge/',
      'Size: 499.3 KiB (511,253 bytes)',
      'Timestamp: 2026-10-09T07:50:41.882000+00:00',
      'Indexed Timestamp: 2026-10-10T07:50:41.882000+00:00',
      'License: MIT',
      'License Family: not available',
      'Arch: not available',
      'Platform: not available',
      'NoArch: NoArchType("python")',
      'Features: not available',
      'Track Features: none',
      'Python Site-Packages: not available',
      'MD5: d2cd1752ec6328dad1b507afb56b6dd0',
      'SHA256: 73a6d9fa7da4be0339734375aaf729b7e7606feb2fa991f9dae348d85806057a',
      'Legacy .tar.bz2 MD5: not available',
      'Legacy .tar.bz2 Size: not available',
      "Package URL: [underline link='https://conda.anaconda.org/conda-forge/noarch/manim-0.22.0-pyh5ded981_0.conda']https://conda.anaconda.org/conda-forge/noarch/manim-0.22.0-pyh5ded981_0.conda[/]",
      "Repository: [underline link='https://github.com/ManimCommunity/manim']https://github.com/ManimCommunity/manim[/]",
      "Homepage: [underline link='https://manim.community/']https://manim.community/[/]",
      "Recipe maintainers: [underline link='https://github.com/naveen521kk']@naveen521kk[/], [underline link='https://github.com/pavelzw']@pavelzw[/]",
      "Provenance: [underline link='https://github.com/conda-forge/manim-feedstock/commit/a092f8d662e092e3ad4eeb3db8e56bd8b1ebfe6e']conda-forge/manim-feedstock@a092f8d662e092e3ad4eeb3db8e56bd8b1ebfe6e[/]",
      'Built with: rattler-build 0.76.1',
    ]),
    'repodata_patches': list([
    ]),
    'run_exports': list([
    ]),
  })
# ---
# name: test_load_version_artifact_data_reads_real_archives[pixi-browse-noarch-0.0.14]
  dict({
    'dependencies': list([
      'python >=3.13',
      'textual >=8.2.7,<9',
      'py-rattler >=0.24.0,<0.25',
      'typer >=0.26.5,<0.27',
      'pyyaml >=6.0.3,<7',
      'python',
    ]),
    'extra_depends': list([
    ]),
    'files': list([
      'site-packages/pixi_browse/__init__.py',
      'site-packages/pixi_browse/__main__.py',
      'site-packages/pixi_browse/models.py',
      'site-packages/pixi_browse/platform_utils.py',
      'site-packages/pixi_browse/rendering.py',
      'site-packages/pixi_browse/repodata.py',
      'site-packages/pixi_browse/search.py',
      'site-packages/pixi_browse/selection_list.tcss',
      'site-packages/pixi_browse/tui/__init__.py',
      'site-packages/pixi_browse/tui/app.py',
      'site-packages/pixi_browse/tui/state.py',
      'site-packages/pixi_browse/tui/version_loader.py',
      'site-packages/pixi_browse/tui/widgets.py',
      'site-packages/pixi_browse-0.0.14.dist-info/INSTALLER',
      'site-packages/pixi_browse-0.0.14.dist-info/METADATA',
      'site-packages/pixi_browse-0.0.14.dist-info/RECORD',
      'site-packages/pixi_browse-0.0.14.dist-info/REQUESTED',
      'site-packages/pixi_browse-0.0.14.dist-info/WHEEL',
      'site-packages/pixi_browse-0.0.14.dist-info/direct_url.json',
      'site-packages/pixi_browse-0.0.14.dist-info/entry_points.txt',
      'site-packages/pixi_browse-0.0.14.dist-info/licenses/LICENSE',
      'info/about.json',
      'info/hash_input.json',
      'info/index.json',
      'info/licenses/LICENSE',
      'info/link.json',
      'info/paths.json',
      'info/recipe/recipe-scripts-license.txt',
      'info/recipe/recipe.yaml',
      'info/recipe/rendered_recipe.yaml',
      'info/recipe/variant_config.yaml',
      'info/tests/tests.yaml',
    ]),
    'metadata': list([
      'Package: pixi-browse',
      'Name: pixi-browse',
      'Version: 0.0.14',
      'Build: pyhc364b38_0',
      'Build Number: 0',
      'Subdir: noarch',
      'File Name: pixi-browse-0.0.14-pyhc364b38_0.conda',
      'Channel: https://conda.anaconda.org/conda-forge/',
      'Size: 40.3 KiB (41,239 bytes)',
      'Timestamp: 2026-06-03T12:15:55.046000+00:00',
      'Indexed Timestamp: 2026-06-04T12:15:55.046000+00:00',
      'License: BSD-3-Clause',
      'License Family: not available',
      'Arch: not available',
      'Platform: not available',
      'NoArch: NoArchType("python")',
      'Features: not available',
      'Track Features: none',
      'Python Site-Packages: not available',
      'MD5: 2ac6faa04372acc0333295512d2369a5',
      'SHA256: c52c5f3d57ac8e2de5da37ffabc053adfdfa73fd90472614b337b73285832cce',
      'Legacy .tar.bz2 MD5: not available',
      'Legacy .tar.bz2 Size: not available',
      "Package URL: [underline link='https://conda.anaconda.org/conda-forge/noarch/pixi-browse-0.0.14-pyhc364b38_0.conda']https://conda.anaconda.org/conda-forge/noarch/pixi-browse-0.0.14-pyhc364b38_0.conda[/]",
      "Repository: [underline link='https://github.com/pavelzw/pixi-browse']https://github.com/pavelzw/pixi-browse[/]",
      "Documentation: [underline link='https://github.com/pavelzw/pixi-browse']https://github.com/pavelzw/pixi-browse[/]",
      "Homepage: [underline link='https://github.com/pavelzw/pixi-browse']https://github.com/pavelzw/pixi-browse[/]",
      "Recipe maintainers: [underline link='https://github.com/pavelzw']@pavelzw[/]",
      "Provenance: [underline link='https://github.com/conda-forge/pixi-browse-feedstock/commit/94b9f1d564e589aaebc8c4baffff1133d8874690']conda-forge/pixi-browse-feedstock@94b9f1d564e589aaebc8c4baffff1133d8874690[/]",
      'Built with: rattler-build 0.65.1',
    ]),
    'repodata_patches': list([
    ]),
    'run_exports': list([
    ]),
  })
# ---
# name: test_load_version_artifact_data_reads_real_archives[pixi-browse-noarch-0.0.15]
  dict({
    'dependencies': list([
      'python >=3.13',
      'textual >=8.2.8,<9',
      'py-rattler >=0.26.0,<0.27',
      'typer >=0.27.2,<0.28',
      'pyyaml >=6.0.3,<7',
      'python',
    ]),
    'extra_depends': list([
      'diff: textual-diff-view >=0.1.5,<0.2',
    ]),
    'files': list([
      'site-packages/pixi_browse/__init__.py',
      'site-packages/pixi_browse/__main__.py',
      'site-packages/pixi_browse/models.py',
      'site-packages/pixi_browse/platform_utils.py',
      'site-packages/pixi_browse/rendering.py',
      'site-packages/pixi_browse/repodata.py',
      'site-packages/pixi_browse/search.py',
      'site-packages/pixi_browse/selection_list.tcss',
      'site-packages/pixi_browse/tui/__init__.py',
      'site-packages/pixi_browse/tui/app.py',
      'site-packages/pixi_browse/tui/state.py',
      'site-packages/pixi_browse/tui/version_loader.py',
      'site-packages/pixi_browse/tui/widgets.py',
      'site-packages/pixi_browse-0.0.15.dist-info/INSTALLER',
      'site-packages/pixi_browse-0.0.15.dist-info/METADATA',
      'site-packages/pixi_browse-0.0.15.dist-info/RECORD',
      'site-packages/pixi_browse-0.0.15.dist-info/REQUESTED',
      'site-packages/pixi_browse-0.0.15.dist-info/WHEEL',
      'site-packages/pixi_browse-0.0.15.dist-info/direct_url.json',
      'site-packages/pixi_browse-0.0.15.dist-info/entry_points.txt',
      'site-packages/pixi_browse-0.0.15.dist-info/licenses/LICENSE',
      'info/about.json',
      'info/hash_input.json',
      'info/index.json',
      'info/licenses/LICENSE',
      'info/link.json',
      'info/paths.json',
      'info/recipe/recipe-scripts-license.txt',
      'info/recipe/recipe.yaml',
      'info/recipe/rendered_recipe.yaml',
      'info/recipe/variant_config.yaml',
      'info/tests/tests.yaml',
    ]),
    'metadata': list([
      'Package: pixi-browse',
      'Name: pixi-browse',
      'Version: 0.0.15',
      'Build: pyhc364b38_0',
      'Build Number: 0',
      'Subdir: noarch',
      'File Name: pixi-browse-0.0.15-pyhc364b38_0.conda',
      'Channel: https://conda.anaconda.org/conda-forge/',
      'Size: 57.7 KiB (59,119 bytes)',
      'Timestamp: 2026-09-10T17:25:35.460000+00:00',
      'Indexed Timestamp: 2026-09-11T17:25:35.460000+00:00',
      'License: BSD-3-Clause',
      'License Family: not available',
      'Arch: not available',
      'Platform: not available',
      'NoArch: NoArchType("python")',
      'Features: not available',
      'Track Features: none',
      'Python Site-Packages: not available',
      'MD5: 90b60dec7f2cdb051ed129c8444fa511',
      'SHA256: 58a7ec2830400741530b3eaabaff8bc40915860c44458e350ebfbb4dd5649f8c',
      'Legacy .tar.bz2 MD5: not available',
      'Legacy .tar.bz2 Size: not available',
      "Package URL: [underline link='https://conda.anaconda.org/conda-forge/noarch/pixi-browse-0.0.15-pyhc364b38_0.conda']https://conda.anaconda.org/conda-forge/noarch/pixi-browse-0.0.15-pyhc364b38_0.conda[/]",
      "Repository: [underline link='https://github.com/pavelzw/pixi-browse']https://github.com/pavelzw/pixi-browse[/]",
      "Documentation: [underline link='https://github.com/pavelzw/pixi-browse']https://github.com/pavelzw/pixi-browse[/]",
      "Homepage: [underline link='https://github.com/pavelzw/pixi-browse']https://github.com/pavelzw/pixi-browse[/]",
      "Recipe maintainers: [underline link='https://github.com/pavelzw']@pavelzw[/]",
      "Provenance: [underline link='https://github.com/conda-forge/pixi-browse-feedstock/commit/48f88c59a4cb90f6a0083bafb4cfad73ed23b010']conda-forge/pixi-browse-feedstock@48f88c59a4cb90f6a0083bafb4cfad73ed23b010[/]",
      'Built with: rattler-build 0.76.0',
    ]),
    'repodata_patches': list([
    ]),
    'run_exports': list([
    ]),
  })
# ---
# name: test_load_version_artifact_data_reads_real_archives[six-noarch-1.16.0]
  dict({
    'dependencies': list([
      'python',
    ]),
    'extra_depends': list([
    ]),
    'files': list([
      'site-packages/six-1.16.0.dist-info/INSTALLER',
      'site-packages/six-1.16.0.dist-info/LICENSE',
      'site-packages/six-1.16.0.dist-info/METADATA',
      'site-packages/six-1.16.0.dist-info/RECORD',
      'site-packages/six-1.16.0.dist-info/REQUESTED',
      'site-packages/six-1.16.0.dist-info/WHEEL',
      'site-packages/six-1.16.0.dist-info/direct_url.json',
      'site-packages/six-1.16.0.dist-info/top_level.txt',
      'site-packages/six.py',
      'info/hash_input.json',
      'info/link.json',
      'info/index.json',
      'info/files',
      'info/paths.json',
      'info/about.json',
      'info/git',
      'info/test/run_test.py',
      'info/recipe/meta.yaml.template',
      'info/recipe/conda_build_config.yaml',
      'info/recipe/meta.yaml',
      'info/test/run_test.bat',
      'info/test/test_time_dependencies.json',
      'info/licenses/LICENSE',
      'info/test/run_test.sh',
    ]),
    'metadata': list([
      'Package: six',
      'Name: six',
      'Version: 1.16.0',
      'Build: pyh6c4a22f_0',
      'Build Number: 0',
      'Subdir: noarch',
      'File Name: six-1.16.0-pyh6c4a22f_0.tar.bz2',
      'Channel: https://conda.anaconda.org/conda-forge/',
      'Size: 13.9 KiB (14,259 bytes)',
      'Timestamp: 2021-05-05T18:45:38.595000+00:00',
      'Indexed Timestamp: 2021-05-06T18:45:38.595000+00:00',
      'License: MIT',
      'License Family: MIT',
      'Arch: not available',
      'Platform: not available',
      'NoArch: NoArchType("python")',
      'Features: not available',
      'Track Features: none',
      'Python Site-Packages: not available',
      'MD5: e5f25f8dbc060e9a8d912e432202afc2',
      'SHA256: a85c38227b446f42c5b90d9b642f2c0567880c15d72492d8da074a59c8f91dd6',
      'Legacy .tar.bz2 MD5: not available',
      'Legacy .tar.bz2 Size: not available',
      "Package URL: [underline link='https://conda.anaconda.org/conda-forge/noarch/six-1.16.0-pyh6c4a22f_0.tar.bz2']https://conda.anaconda.org/conda-forge/noarch/six-1.16.0-pyh6c4a22f_0.tar.bz2[/]",
      "Repository: [underline link='https://github.com/benjaminp/six']https://github.com/benjaminp/six[/]",
      "Documentation: [underline link='https://six.readthedocs.io/']https://six.readthedocs.io/[/]",
      "Homepage: [underline link='https://six.readthedocs.io/']https://six.readthedocs.io/[/]",
      "Recipe maintainers: [underline link='https://github.com/jakirkham']@jakirkham[/], [underline link='https://github.com/msarahan']@msarahan[/], [underline link='https://github.com/ocefpaf']@ocefpaf[/]",
    ]),
    'repodata_patches': list([
    ]),
    'run_exports': list([
    ]),
  })
# ---
# name: test_render_package_preview_from_real_records
  '''
  # libzlib
  
  Version selector preview (4 artifacts):
  Press Enter to open the version list.
  
  ▾ linux-64 (2)
  1.3.2 h25fd6f3_3
  1.3.1 hb9d3cd8_2
  
  ▾ osx-arm64 (2)
  1.3.2 h8088a28_3
  1.3.1 h8359307_2
  '''
# ---
